// proto/shipment.proto
syntax = "proto3";

package shipment;
option go_package = "./proto";

service ShipmentService {
  rpc CalculateRates(RateRequest) returns (MultiRateResponse) {}
  rpc GetAvailableCouriers(AvailabilityRequest) returns (CourierListResponse) {}
}

message RateRequest {
  int32 origin_pincode = 1;
  int32 destination_pincode = 2;
  int32 weight = 3;  // in grams
  repeated string courier_codes = 4; // Optional: specific couriers to check
  string payment_mode = 5; // COD/Prepaid
  repeated Package dimensions = 6;
}

message Package {
  float length = 1;
  float width = 2;
  float height = 3;
  float weight = 4;
}

message AvailabilityRequest {
  int32 origin_pincode = 1;
  int32 destination_pincode = 2;
}

message CourierListResponse {
  bool success = 1;
  repeated CourierInfo available_couriers = 2;
  string error = 3;
}

message CourierInfo {
  string courier_code = 1;
  string courier_name = 2;
  repeated string supported_services = 3; // express, surface, etc.
}

message MultiRateResponse {
  bool success = 1;
  repeated CourierRate rates = 2;
  string error = 3;
}

message CourierRate {
  string courier_code = 1;
  string courier_name = 2;
  string service_type = 3;
  RateData rate_details = 4;
  int32 estimated_days = 5;
}

message RateData {
  double total_amount = 1;
  double gross_amount = 2;
  double tax_amount = 3;
  double cod_charges = 4;
  double fuel_surcharge = 5;
}
